# cognitive-jarvis

./: .env.example  .gitignore  DEEP_ANALYSIS_REPORT.md  README.md  README_v2.md  __init__.py  bro_ui.py  config.py  debug_file.py  main.py  pyproject.toml  quick_check.py  requirements.txt  run.py  run_pro_tests.py  test_all.py  test_local_brain.py  test_mic.py  test_pro_improvements.py  test_semantic_router.py  test_system.py  test_ui_brain_integration.py  test_ui_launch.py
bro_memory/: calendar_events.toml  conversation_history.json  conversation_history.toml  custom_commands.json  custom_commands.toml  facts.toml  notes.toml  reminders.toml  weather_cache.toml
call_sentry/: SETUP.md  __init__.py  call_history.json  call_sentry.py  local_sentry.py  server.py
cognitive/: __init__.py  engine.py  personality.py  semantic_router.py
jarvis/: config.py  main.py
jarvis/call_sentry/: call_sentry.py  local_sentry.py
jarvis/cognitive/: semantic_router.py
jarvis/llm/: cognitive_brain.py  model_selector.py  ollama_brain.py
jarvis/memory/: __init__.py  memory.py
jarvis/tools/: browser.py  calendar.py  file_convert.py  memory_tools.py  music_player.py  ocr.py  pc_control.py  registry.py  reminders.py  test_tts.py  voice_input.py  weather.py  web_automation.py
jarvis/ui/: __init__.py  main_window.py
jarvis/ui/components/: sidebar.py  voice_visualizer.py
jarvis/ui/pages/: calendar_page.py  chat_page.py  dashboard_page.py  web_page.py  (+3 more)
jarvis/voice/: audio_stream.py  stt_fast.py  wake_word.py
llm/: __init__.py  cognitive_brain.py  hybrid_brain.py  model_selector.py  ollama_brain.py
memory/: __init__.py  memory.py
tests/: run_pro_tests.py  test_json_parsing.py  test_local_brain.py  test_semantic_router.py  verify_pro_features.py
tools/: ANDROID_SETUP.md  __init__.py  android_control.py  call_sentry_tools.py  debug_audio.py  file_manager.py  file_ops.py  pc_control.py  registry.py  screen_copilot.py  shopping_assistant.py  smart_shopping.py  system_monitor.py  video_recognition.py  vision.py  weather.py
ui/: main_window.py  theme.py
ui/components/: voice_visualizer.py
ui/pages/: chat_page.py  notes_page.py  phone_page.py  vision_page.py
voice/: __init__.py  local_tts.py  stt.py  stt_fast.py  tts.py  tts_neural.py
