[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jarvis"
version = "2.0.0"
description = "BRO - Advanced Cognitive AI Assistant with Hybrid Neuro-Symbolic Architecture"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["ai", "assistant", "jarvis", "voice", "automation", "llm"]

dependencies = [
    "python-dotenv>=1.0.0",
    "psutil>=5.9.0",
    "pyautogui>=0.9.54",
    "pyttsx3>=2.90",
    "SpeechRecognition>=3.10.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
full = [
    # Memory
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    # Voice
    "pyaudio>=0.2.13",
    "vosk>=0.3.45",
    "faster-whisper>=0.10.0",
    # Vision
    "opencv-python>=4.8.0",
    "easyocr>=1.7.0",
    # Web Automation
    "playwright>=1.40.0",
    # File Conversion
    "PyPDF2>=3.0.0",
    "python-pptx>=0.6.21",
    "python-docx>=1.1.0",
    # Android
    "pure-python-adb>=0.3.0",
    # App Discovery
    "winapps>=0.3.0",
    "AppOpener>=1.7",
    "pywin32>=306",
]

dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
]

[project.scripts]
jarvis = "jarvis.main:main"
bro = "jarvis.main:main"

[project.urls]
Homepage = "https://github.com/user/jarvis"
Documentation = "https://github.com/user/jarvis#readme"
Repository = "https://github.com/user/jarvis"

[tool.setuptools.packages.find]
where = ["."]
include = ["jarvis*", "cognitive*", "llm*", "memory*", "tools*", "voice*"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt", "*.toml", "*.yaml"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 100
